Prod-EU/force-app/main/default/objects/Zip_to_Terr__c/Zip_to_Terr__c.object-meta.xml
<CustomObject>
    <description>Jagan 04/2/2017 - Created this object to hold zip to terr alignment information for all countries.</description>
    <label>Zip to Terr</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip to Terrs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>