Prod-EU/force-app/main/default/objects/Zip_to_Terr__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>