Prod-EU/force-app/main/default/objects/Zip_to_Terr__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>Concatenation 2 character code of country and the zip. For e.g. if the zip is 92121 for US then the external Id will be like US92121</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>