Prod-EU/force-app/main/default/objects/Zip_to_Terr__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Territory</label>
    <length>100</length>
    <type>Text</type>
</CustomField>