Prod-EU/force-app/main/default/objects/Zip_to_Terr__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Territory__c</columns>
    <columns>District__c</columns>
    <columns>Region__c</columns>
    <columns>State__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>United Kingdom,Ireland</value>
    </filters>
    <label>All</label>
</ListView>